@@ -29,7 +29,6 @@ Para próxima versión ZEsarUX:
 
 -Turbo spool setting en tbblue y otras máquinas 128kb...
 
--sprites save lo hace siempre de zona por defecto
 -sprites en tsconf , al poner hardware, cambia la paleta a tbblue y no la deja cambiar
  
 -probar llamadas a menu_simple_ventana despues de extender coordenadas menu
